feat: add training list API
